--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@
             <div class="flex justify-between items-center h-16">
                 <!-- 網站標題/Logo -->
                 <div class="flex-shrink-0">
+                    <i class="fa-solid fa-plane-departure"></i>
                     <a href="#hero" class="text-2xl font-bold text-noaml-pink hover:text-noaml-pink transition duration-300">
                         台湾留学ガイド
                     </a>
@@ -289,7 +290,7 @@
                         <span class="text-3xl text-gray">💸</span>
                         <h3 class="text-2xl font-bold">費用の優位性</h3>
                     </div>
-                    <p class="text-gray-700">欧米圏と比較して、学費・生活費がリーズナブル。円安の現在でも、賢く留学を実現できます。</p>
+                    <p class="text-gray-700">欧米圏と比較して、学費・生活費がリーズナブル。円安の現在でも、賢く留学を実現できます。大学によって学費に差があるので予算に合う大学を探しましょう。</p>
                 </div>
                 
                 <!-- Card 2: 親日的な文化 -->
@@ -417,7 +418,7 @@
                             <div class="timeline-details bg-white border-primary-pink">
                                 <ul class="list-disc list-inside ml-8">
                                     <li>パスポートの準備（申請する時期にもよりますが、１ヶ月ほど余裕を持って準備しましょう）</li>
-                                    <li>予備校入学（予備校については別で記載）</li>
+                                    <li>予備校入学（予備校についてはお問い合わせください。）</li>
                                     <li>中国語の勉強開始（一番大事な語学勉強！頑張りましょう）</li>
                                     <li>予備校の合宿参加</li>
                                     <li>志望校決定、必要書類書類準備</li>
@@ -552,7 +553,7 @@
                             <strong>食文化:</strong> 日本のような定食文化より、外食や屋台（夜市）が中心。安くて美味しいものが溢れています。抵抗感のあるものも多いですが、何事も挑戦！積極的に食べてみてね。
                         </li>
                         <li class="p-4 bg-white rounded-lg shadow border-l-4 border-primary-pink">
-                            <strong>時間の感覚:</strong> 日本よりルーズな人が多い印象ですが、流されないように！バスの時間はアプリを駆使しましょう。
+                            <strong>時間の感覚:</strong> 日本よりルーズな人が多い印象ですが、流されないように！バスの時間はアプリを駆使しましょう。MRT(地下鉄)や電車は基本調べて出てくる時間通りです！
                         </li>
                         <li class="p-4 bg-white rounded-lg shadow border-l-4 border-text-berry">
                             <strong>性格:</strong> 人との距離感が近く、積極的に話しかけてくれる人が多いです。大丈夫と思えれば相手をしてあげましょう。
@@ -566,7 +567,7 @@
                             <strong>交通事情:</strong> バイクが多く、歩行者優先ではない場所も。信号や周囲の確認は怠らないようにしましょう。公共交通機関の料金はとにかく安い！YouBikeというレンタル自転車もおすすめです！
                         </li>
                         <li class="p-4 bg-white rounded-lg shadow border-l-4 border-text-berry/80">
-                            <strong>衛生面:</strong> トイレットペーパーがないなど異文化を感じることが多々あります。気になる人は消毒液などの衛生グッツを持ち歩きましょう。
+                            <strong>衛生面:</strong> トイレットペーパーが置いてないなど異文化を感じることが多々あります。気になる人は消毒液などの衛生グッツを持ち歩きましょう。
                         </li>
                         <li class="p-4 bg-white rounded-lg shadow border-l-4 border-primary-pink/80">
                             <strong>蚊対策:</strong> 特に夏場は蚊が多いです。虫除け対策は日本から持参することをおすすめします。日本で刺されるより体感かゆいです。
@@ -632,12 +633,12 @@
             <!-- 社群連結 (Instagram & YouTube) -->
             <div class="flex justify-center space-x-6 mb-4">
                  <!-- ここで 'social-link' クラスを使用 -->
-                <a href="#" target="_blank" class="social-link">
+                <a href="https://www.instagram.com/onejie_memories.05?igsh=MWNmOWZrNndna2M2Mw%3D%3D&utm_source=qr" target="_blank" class="https://www.instagram.com/onejie_memories.05?igsh=MWNmOWZrNndna2M2Mw%3D%3D&utm_source=qr">
                     <!-- Instagram Icon SVG -->
                     <svg xmlns="https://www.instagram.com/onejie_memories.05?igsh=MWNmOWZrNndna2M2Mw%3D%3D&utm_source=qr" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect><path d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"></path><line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line></svg>
                     <span class="sr-only">Instagram</span>
                 </a>
-                <a href="#" target="_blank" class="social-link">
+                <a href="https://youtube.com/@onejie_memories.05?si=GIT4fNDFqTZAAVjg" target="_blank" class="https://youtube.com/@onejie_memories.05?si=GIT4fNDFqTZAAVjg">
                     <!-- YouTube Icon SVG -->
                     <svg xmlns="https://youtube.com/@onejie_memories.05?si=GIT4fNDFqTZAAVjg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M10 15l5-3-5-3v6z"></path><rect x="2" y="3" width="20" height="18" rx="5"></rect></svg>
                     <span class="sr-only">YouTube</span>
