--- a/index.html
+++ b/index.html
@@ -207,8 +207,11 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center h-16">
                 <!-- 網站標題/Logo -->
-                <div class="flex-shrink-0">
+                <div class="icon">
                     <i class="fa-solid fa-plane-departure"></i>
+                </div>
+                
+                <div class="flex-shrink-0">
                     <a href="#hero" class="text-2xl font-bold text-noaml-pink hover:text-noaml-pink transition duration-300">
                         台湾留学ガイド
                     </a>
